[package]
name = "fabric-explorer"
version = "0.1.0"
authors = ["Vladislav Markushin <negigic@gmail.com>"]
edition = "2018"

[dependencies]
grpc = "~0.7"
protobuf = "~2"
futures = "~0.3"
grpc-protobuf = "0.7.1"
typed-html = "0.2.2"
warp = "0.2.2"
tokio = { version = "0.2", features = ["full"] }
hex = "0.4.2"
mime = "0.3.16"
serde = "1.0.106"
serde_json = "1.0.52"
chrono = "0.4.11"

[build-dependencies]
protoc-rust-grpc = "~0.7"
walkdir = "2.3.1"
